traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:24: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:27: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:30: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:33: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:36: error: Unmatched closing brace '}' ignored here
}
^