traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 1;
var count:Int=1;
var y:Int=1;
override def run() {
  
  setPos(0,0);
  writeMessage(0)
    diagonale(3);
  }
  
  def diagonale(y:Int){
  var x:Int=0
  while(y!=0){
    setPos(0,y);
    writeMessage(count);
    x=x+1;
    y=y-1;
    count=count+1;
  	}
	}
}
